crates/tt-cli/src/commands/report/json/snapshots/tt_cli__commands__report__json__tests__report_json_by_tag_aggregates.snap
---
source: crates/tt-cli/src/commands/report/json/tests.rs
expression: output
---
{
  "generated_at": "2025-01-29T16:00:00+00:00",
  "timezone": "Etc/UTC",
  "week_start_day": "monday",
  "period": {
    "start": "2025-01-27",
    "end": "2025-02-02",
    "type": "week"
  },
  "by_tag": [
    {
      "tag": "dev",
      "time_direct_ms": 3600000,
      "time_delegated_ms": 0,
      "streams": [
        "abc123def456"
      ]
    },
    {
      "tag": "ops",
      "time_direct_ms": 1800000,
      "time_delegated_ms": 600000,
      "streams": [
        "def456ghi789"
      ]
    }
  ],
  "streams": [
    {
      "id": "abc123def456",
      "name": "tmux/dev/session-1",
      "time_direct_ms": 3600000,
      "time_delegated_ms": 0,
      "tags": [
        "dev"
      ]
    },
    {
      "id": "def456ghi789",
      "name": "tmux/dev/session-2",
      "time_direct_ms": 1800000,
      "time_delegated_ms": 600000,
      "tags": [
        "ops"
      ]
    }
  ],
  "untagged": {
    "time_direct_ms": 0,
    "time_delegated_ms": 0,
    "streams": []
  },
  "agent_sessions": {
    "total": 0,
    "by_source": {},
    "by_type": {},
    "top_sessions": []
  },
  "totals": {
    "time_direct_ms": 5400000,
    "time_delegated_ms": 600000,
    "stream_count": 2,
    "unassigned_direct_ms": 0,
    "unassigned_delegated_ms": 0
  }
}
