crates/tt-cli/src/commands/report/json/snapshots/tt_cli__commands__report__json__tests__report_json_output.snap
---
source: crates/tt-cli/src/commands/report/json/tests.rs
expression: output
---
{
  "generated_at": "2025-01-29T16:00:00+00:00",
  "timezone": "Etc/UTC",
  "week_start_day": "monday",
  "period": {
    "start": "2025-01-27",
    "end": "2025-02-02",
    "type": "week"
  },
  "by_tag": [],
  "streams": [
    {
      "id": "abc123def456",
      "name": "tmux/dev/session-1",
      "time_direct_ms": 7200000,
      "time_delegated_ms": 4500000,
      "tags": []
    }
  ],
  "untagged": {
    "time_direct_ms": 7200000,
    "time_delegated_ms": 4500000,
    "streams": [
      "abc123def456"
    ]
  },
  "agent_sessions": {
    "total": 0,
    "by_source": {},
    "by_type": {},
    "top_sessions": []
  },
  "totals": {
    "time_direct_ms": 7200000,
    "time_delegated_ms": 4500000,
    "stream_count": 1,
    "unassigned_direct_ms": 0,
    "unassigned_delegated_ms": 0,
    "total_tracked_ms": 9000000
  }
}
